# doc_redaction

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .nojekyll  ADMIN_GUIDE.md  AGENTS.md  DocRedactApp.spec  DocRedactApp_0.1.spec  DocRedactApp_0.2.0.spec  DocRedactApp_0.2.spec  DocRedactApp_0.4.0.spec  DocRedactApp_0.6.1.spec  Dockerfile  Dockerfile.pi  Dockerfile_old  INDEX.md  MANIFEST.in  README.md  README_PYPI.md  _quarto.yml  agent_routes.py  app.py  cli_redact.py  docker-compose_llama.yml  docker-compose_llama_agentic.yml  docker-compose_llama_long_context.yml  docker-compose_vllm.yml  entrypoint.sh  entrypoint_router.py  example_app_config.env  example_config.env  how_to_create_exe_dist.txt  index-LAPTOP-OI147962.html  index.html  index.md  index.qmd  lambda_entrypoint.py  load_dynamo_logs.py  load_s3_logs.py  (+11 more)
.github/: README.md  workflow_README.md
.github/scripts/: setup_test_data.py
.github/workflows/: ci.yml  multi-os-test.yml  simple-test.yml  sync-pi-agent-space.yml  sync_to_hf.yml  sync_to_hf_zero_gpu.yml  test.yml
.pi/: models.json.example  settings.json
agent-redact/: README.md  requirements_pi_agent.txt
agent-redact-space/pi-agent/: Dockerfile  README.md  sync-manifest.txt  sync_to_space.sh
agent-redact/agentcore/: README.md  entrypoint.py  invoke_agent.py  package_runtime.py  session_store.py  workspace_sync.py
agent-redact/pi/: agent_runtime.py  agentcore_boto.py  agentcore_harness_runtime.py  agentcore_runtime.py  agentcore_workspace_bridge.py  bootstrap_pi_config.py  gradio_app.py  harness_input_bridge.py  langgraph_runtime.py  output_files.py  pi_agent_config.py  pi_examples.py  pi_rpc_client.py  pi_session_usage.py  pi_workspace_skills.py  redaction_prompt.py  remote_redaction.py  run_doc_redact.py  session_logs.py  session_workspace.py  start.sh
agent-redact/pi-agent/: .dockerignore  .gitattributes  Dockerfile  README.md  entrypoint-ecs.sh  entrypoint.sh  sync-manifest.txt  sync_to_space.sh
cdk/: app.py  cdk_appregistry.py  cdk_cloudfront_headers.py  cdk_config.py  cdk_functions.py  cdk_install.py  cdk_post_deploy.py  cdk_stack.py  check_resources.py  get_cdk_template.py  lambda_load_dynamo_logs.py  post_cdk_build_quickstart.py  requirements.txt
config/: app_config.env.example  docker_app_config.env.example  pi_agent.env.example
doc_redaction/: __init__.py  api.py  cli_api.py  cli_redact.py  data_anonymise.py  file_conversion.py  file_redaction.py  find_duplicate_pages.py  find_duplicate_tabular.py  gradio_app.py  helper_functions.py  install_deps.py  lambda_entrypoint.py  redaction_review.py  summaries.py
docs/: index.html  search.json
example_data/: Bold minimalist professional cover letter.docx  Lambeth_2030-Our_Future_Our_Lambeth.pdf.csv  combined_case_notes.xlsx  partnership_toolkit_redact_custom_deny_list.csv  test_allow_list_graduate.csv  test_allow_list_partnership.csv
intros/: long_intro.txt  pi_intro.txt  short_intro.txt  short_intro_responsible.txt
mcp_doc_redaction/: README.md  __init__.py  artifact_bundle.py  gradio_transport.py  schemas.py  server.py
quarto_site/: app_settings.html  faq.html  installation_guide.html  management_guide.html  ocr_and_redaction_with_qwen35.html  python_package_usage.html  redaction_with_vlm_and_llms.html  user_guide.html
skills/: Example agent skills use prompt.txt  Example prompt partnership.txt
src/: agent_mcp.md  agentic_redaction.html  agentic_redaction.qmd  agentic_redaction_with_gui.html  app_settings-LAPTOP-OI147962.html  app_settings.html  app_settings.qmd  faq.html  faq.qmd  installation_guide.html  installation_guide.qmd  management_guide-LAPTOP-OI147962.html  management_guide.html  management_guide.qmd  ocr_and_redaction_with_qwen35-LAPTOP-OI147962.html  ocr_and_redaction_with_qwen35.html  ocr_and_redaction_with_qwen35.qmd  package_api_usage.qmd  python_package_usage.html  python_package_usage.qmd  redaction_with_qwen35.html  redaction_with_qwen35.qmd  redaction_with_vlm_and_llms-LAPTOP-OI147962.html  redaction_with_vlm_and_llms.html  redaction_with_vlm_and_llms.qmd  styles.css  user_guide-LAPTOP-OI147962.html  user_guide.html  user_guide.qmd
test/: GITHUB_ACTIONS.md  GUI_TEST_README.md  INSTALL.md  README.md  __init__.py  cli_epilog_suite.py  conftest.py  demo_single_test.py  pi_test_support.py  requirements.txt  run_gui_test.bat  run_gui_test.ps1  run_tests.py  test.py  test_agent_apply_review_redactions.py  test_agent_runtime.py  test_agentcore_harness_runtime.py  test_agentcore_package.py  test_agentcore_runtime.py  test_agentcore_workspace_bridge.py  test_agentcore_workspace_sync.py  test_annotation_color_parsing.py  test_bootstrap_pi_config.py  test_cli_api_output_paths.py  test_cli_direct_mode_defaults.py  test_cli_smoke.py  test_comprehend_connectivity.py  test_docx_first_page_preview.py  test_fix.py  test_gradio_doc_redact_simple.py  test_gradio_platform.py  test_gradio_summarise_simple.py  test_gradio_transport_sse.py  test_gradio_upload_staging.py  test_gui_only.py  test_langgraph_tools.py  test_local_ocr_reading_order_modes.py  test_local_ocr_reading_order_paddle_native.py  test_mcp_doc_redaction_bundle.py  test_mcp_doc_redaction_extract_paths.py  (+25 more)
tools/: LLM_ENTITY_DETECTION_README.md  __init__.py  apply_hf_zero_gpu_readme_frontmatter.py  auth.py  aws_functions.py  aws_textract.py  cli_redact.py  cli_usage_logger.py  config.py  custom_csvlogger.py  custom_image_analyser_engine.py  data_anonymise.py  example_cli_calls.txt  file_conversion.py  file_redaction.py  find_duplicate_pages.py  find_duplicate_tabular.py  gradio_platform.py  helper_functions.py  inference_attention.py  llm_entity_detection.py  llm_entity_detection_prompts.py  llm_funcs.py  load_spacy_model_custom_recognisers.py  ocr_reading_order.py  post_redaction_pass1_qa.py  presidio_analyzer_custom.py  preview_redaction_boxes.py  quickstart.py  redaction_review.py  redaction_types.py  run_vlm.py  secure_path_utils.py  secure_regex_utils.py  simplified_api.py  summaries.py  textract_batch_call.py  verify_redaction_coverage.py  word_segmenter.py
web/: AdminGuide.md
(+78 files in other folders)
